--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Halo Ini Git Hub Marta</h1>
+    <div id="app">
+        
+    </div>
+
+    <script src="assets/js/vue.js"></script>
+    <script>
+        let app = new Vuew({
+            el: "#app",
+            data: {
+                message: "Ini web Itsbat Husnul Iman"
+            }
+        })
+    </script>
 </body>
 </html>
