--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div id="app">
-        
+        {{ message }}
     </div>
 
     <script src="assets/js/vue.js"></script>
     <script>
-        let app = new Vuew({
+        let app = new Vue({
             el: "#app",
             data: {
                 message: "Ini web Itsbat Husnul Iman"
